load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "scrape",
    srcs = [
        "link_extractor.go",
        "scraper.go",
        "utils.go",
        "web_page_extractor.go",
        "web_page_parser.go",
    ],
    importpath = "github.com/chellams/web-scraper/internal/scrape",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_rs_zerolog//log",
        "@org_golang_x_net//html",
    ],
)
